Implement api get movie
