# server/ports/http.go
@@ -11,6 +11,7 @@ type Repository interface {
 	ListShows(ctx context.Context, params ListShowsParams) ([]Show, Pagination, error)
 	GetMovie(ctx context.Context, id int64) (Movie, error)
 	GetSeries(ctx context.Context, id int64) (Series, error)
+	GetVideo(ctx context.Context, id int64) (Video, error)
 }
 
 type HttpServer struct {
