# server/repository/dbmodels/torrent_links.go
@@ -93,15 +93,26 @@ var TorrentLinkWhere = struct {
 
 // TorrentLinkRels is where relationship names are stored.
 var TorrentLinkRels = struct {
-}{}
+	Video string
+}{
+	Video: "Video",
+}
 
 // torrentLinkR is where relationships are stored.
 type torrentLinkR struct {
+	Video *Video `boil:"Video" json:"Video" toml:"Video" yaml:"Video"`
 }
 
 // NewStruct creates a new relationship struct
 func (*torrentLinkR) NewStruct() *torrentLinkR {
 	return &torrentLinkR{}
+}
+
+func (r *torrentLinkR) GetVideo() *Video {
+	if r == nil {
+		return nil
+	}
+	return r.Video
 }
 
 // torrentLinkL is where Load methods for each relationship are stored.
@@ -418,6 +429,184 @@ func (q torrentLinkQuery) Exists(ctx context.Context, exec boil.ContextExecutor)
 	}
 
 	return count > 0, nil
+}
+
+// Video pointed to by the foreign key.
+func (o *TorrentLink) Video(mods ...qm.QueryMod) videoQuery {
+	queryMods := []qm.QueryMod{
+		qm.Where("`id` = ?", o.VideoID),
+	}
+
+	queryMods = append(queryMods, mods...)
+
+	return Videos(queryMods...)
+}
+
+// LoadVideo allows an eager lookup of values, cached into the
+// loaded structs of the objects. This is for an N-1 relationship.
+func (torrentLinkL) LoadVideo(ctx context.Context, e boil.ContextExecutor, singular bool, maybeTorrentLink interface{}, mods queries.Applicator) error {
+	var slice []*TorrentLink
+	var object *TorrentLink
+
+	if singular {
+		var ok bool
+		object, ok = maybeTorrentLink.(*TorrentLink)
+		if !ok {
+			object = new(TorrentLink)
+			ok = queries.SetFromEmbeddedStruct(&object, &maybeTorrentLink)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", object, maybeTorrentLink))
+			}
+		}
+	} else {
+		s, ok := maybeTorrentLink.(*[]*TorrentLink)
+		if ok {
+			slice = *s
+		} else {
+			ok = queries.SetFromEmbeddedStruct(&slice, maybeTorrentLink)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", slice, maybeTorrentLink))
+			}
+		}
+	}
+
+	args := make(map[interface{}]struct{})
+	if singular {
+		if object.R == nil {
+			object.R = &torrentLinkR{}
+		}
+		args[object.VideoID] = struct{}{}
+
+	} else {
+		for _, obj := range slice {
+			if obj.R == nil {
+				obj.R = &torrentLinkR{}
+			}
+
+			args[obj.VideoID] = struct{}{}
+
+		}
+	}
+
+	if len(args) == 0 {
+		return nil
+	}
+
+	argsSlice := make([]interface{}, len(args))
+	i := 0
+	for arg := range args {
+		argsSlice[i] = arg
+		i++
+	}
+
+	query := NewQuery(
+		qm.From(`videos`),
+		qm.WhereIn(`videos.id in ?`, argsSlice...),
+	)
+	if mods != nil {
+		mods.Apply(query)
+	}
+
+	results, err := query.QueryContext(ctx, e)
+	if err != nil {
+		return errors.Wrap(err, "failed to eager load Video")
+	}
+
+	var resultSlice []*Video
+	if err = queries.Bind(results, &resultSlice); err != nil {
+		return errors.Wrap(err, "failed to bind eager loaded slice Video")
+	}
+
+	if err = results.Close(); err != nil {
+		return errors.Wrap(err, "failed to close results of eager load for videos")
+	}
+	if err = results.Err(); err != nil {
+		return errors.Wrap(err, "error occurred during iteration of eager loaded relations for videos")
+	}
+
+	if len(videoAfterSelectHooks) != 0 {
+		for _, obj := range resultSlice {
+			if err := obj.doAfterSelectHooks(ctx, e); err != nil {
+				return err
+			}
+		}
+	}
+
+	if len(resultSlice) == 0 {
+		return nil
+	}
+
+	if singular {
+		foreign := resultSlice[0]
+		object.R.Video = foreign
+		if foreign.R == nil {
+			foreign.R = &videoR{}
+		}
+		foreign.R.TorrentLinks = append(foreign.R.TorrentLinks, object)
+		return nil
+	}
+
+	for _, local := range slice {
+		for _, foreign := range resultSlice {
+			if local.VideoID == foreign.ID {
+				local.R.Video = foreign
+				if foreign.R == nil {
+					foreign.R = &videoR{}
+				}
+				foreign.R.TorrentLinks = append(foreign.R.TorrentLinks, local)
+				break
+			}
+		}
+	}
+
+	return nil
+}
+
+// SetVideo of the torrentLink to the related item.
+// Sets o.R.Video to related.
+// Adds o to related.R.TorrentLinks.
+func (o *TorrentLink) SetVideo(ctx context.Context, exec boil.ContextExecutor, insert bool, related *Video) error {
+	var err error
+	if insert {
+		if err = related.Insert(ctx, exec, boil.Infer()); err != nil {
+			return errors.Wrap(err, "failed to insert into foreign table")
+		}
+	}
+
+	updateQuery := fmt.Sprintf(
+		"UPDATE `torrent_links` SET %s WHERE %s",
+		strmangle.SetParamNames("`", "`", 0, []string{"video_id"}),
+		strmangle.WhereClause("`", "`", 0, torrentLinkPrimaryKeyColumns),
+	)
+	values := []interface{}{related.ID, o.ID}
+
+	if boil.IsDebug(ctx) {
+		writer := boil.DebugWriterFrom(ctx)
+		fmt.Fprintln(writer, updateQuery)
+		fmt.Fprintln(writer, values)
+	}
+	if _, err = exec.ExecContext(ctx, updateQuery, values...); err != nil {
+		return errors.Wrap(err, "failed to update local table")
+	}
+
+	o.VideoID = related.ID
+	if o.R == nil {
+		o.R = &torrentLinkR{
+			Video: related,
+		}
+	} else {
+		o.R.Video = related
+	}
+
+	if related.R == nil {
+		related.R = &videoR{
+			TorrentLinks: TorrentLinkSlice{o},
+		}
+	} else {
+		related.R.TorrentLinks = append(related.R.TorrentLinks, o)
+	}
+
+	return nil
 }
 
 // TorrentLinks retrieves all the records using an executor.
